welcome.lessons.welcome.bdr.BDR.scala.code
if (estSurMessage)
{
	litMessage();
	if (litMessage == Z)
	{
		recule();
		recule();
	}
}
